Fixed alignment for new entity_action buttons

--- a/theme/base/css/display.css
+++ b/theme/base/css/display.css
@@ -671,9 +671,8 @@ border:0;
 padding-left:23px;
 }
 
-.entity_edit a,
-.entity_send-a-message a,
-.entity_nudge p {
+.entity_actions a,
+.entity_actions p {
 padding:4px 4px 4px 26px;
 }
 
